# AutoJobApplicationv1

./: .env.example  .gitignore  README.md  ai_generator.py  config.py  job_applier.py  jobs.csv  models.txt  pyproject.toml  requirements.txt  utils.py
core/: admin.py  models.py
core/management/commands/: runbot.py
core/migrations/: 0001_initial.py
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: add_job.html  base.html  discovery.html  index.html  settings.html
jobtracker/: settings.py
services/: ai_generator.py  email_sender.py  job_discovery.py
